tests/errors/ichar_01.f90
program ichar_01
    implicit none
    print*, ichar("okay")
end program